--- a/src/views/DesignEditor/components/Preview/newloading.css
+++ b/src/views/DesignEditor/components/Preview/newloading.css
@@ -64,7 +64,7 @@
      background: none;
     position: absolute;
         top:50%;
-        left: 12%;
+        left: 8vw;
         /* margin-top: 50%; */
  }
 
