--- a/src/pages/components/auth/login/LoginEzpics.css
+++ b/src/pages/components/auth/login/LoginEzpics.css
@@ -60,6 +60,7 @@ a {
   width: 300px;
   border-radius: 8px;
   animation: fadeIn 0.5s ease-in-out;
+      margin-bottom: 10%;
 }
 
 .googleButton {
