--- a/src/pages/components/home/content/Content.scss
+++ b/src/pages/components/home/content/Content.scss
@@ -163,5 +163,6 @@ $dark-text: #5f6982;
 *:after,
 *:before {
 	box-sizing: border-box;
-	transform-style: preserve-3d;
+	// transform-style: preserve-3d;
 } 
+
