--- a/src/pages/components/home/content/Content.scss
+++ b/src/pages/components/home/content/Content.scss
@@ -159,10 +159,10 @@ $dark-text: #5f6982;
         cursor: pointer;
     }
 }
-*,
-*:after,
-*:before {
-	box-sizing: border-box;
-	// transform-style: preserve-3d;
-} 
+// *,
+// *:after,
+// *:before {
+// 	// box-sizing: border-box;
+// 	// transform-style: preserve-3d;
+// } 
 
