--- a/src/pages/components/home/content/Content.css
+++ b/src/pages/components/home/content/Content.css
@@ -1,15 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 :root {
-  --size: 150;
+  --size: 500;
   --coefficient: 1px;
   --timeline: 2.6s;
   --delay: 0.65s;
   --rotation-y: -24;
   --rotation-x: 28;
-  --color-one: #3a0ca3;
-  --color-two: #4361ee;
-  --color-three: #4cc9f0;
+  /* --color-one: #3a0ca3; */
+  /* --color-two: #4361ee; */
+  /* --color-three: #4cc9f0; */
 }
 img {
   max-width: 100%;
@@ -240,7 +240,7 @@ input {
   }
 }
 
-.shadow-vspet {
+/* .shadow-vspet {
   width: calc(var(--size) * var(--coefficient));
   position: absolute;
   bottom: 0;
@@ -255,7 +255,7 @@ input {
   background: black;
   box-sizing: border-box;
   transform-style: preserve-3d;
-}
+} */
 
 .loader-vspet {
   --depth: var(--size);
@@ -402,7 +402,7 @@ input {
 
 .cuboid__side-vspet:nth-of-type(2) {
   --b: 0.9;
-  --color: var(--color-three, #ff006e);
+  /* --color: var(--color-three, #ff006e); */
   height: 100%;
   width: calc(var(--depth, 20) * var(--coefficient));
   top: 50%;
@@ -424,7 +424,7 @@ input {
 
 .cuboid__side-vspet:nth-of-type(4) {
   --b: 1;
-  --color: var(--color-three, #ff006e);
+  /* --color: var(--color-three, #ff006e); */
   height: 100%;
   width: calc(var(--depth, 20) * var(--coefficient));
   left: 0;
@@ -436,9 +436,14 @@ input {
 
 .cuboid__side-vspet:nth-of-type(5) {
   --b: 1;
-  --color: var(--color-two, #3a86ef);
+  /* --color: var(--color-two, #3a86ef); */
   height: 100%;
   width: 100%;
+  background-image: url('./assets/database.png');
+    /* Replace with the actual image URL */
+    background-size: cover;
+    /* Adjust as needed */
+    background-position: center;
   transform: translate3d(
     0,
     0,
@@ -501,3 +506,165 @@ input {
     transform-style: preserve-3d;
 }
 
+.loading-leting {
+  margin-left: 5px;
+  padding-left: 10px;
+  
+  font-weight: 700;
+  font-size: 50px;
+  color: white;
+}
+
+.let1,.let2,.let3,.let4,.let5,.let6,.let7 {
+  position: relative;
+    top: 0.63em;
+    display: inline-block;
+    text-transform: uppercase;
+    opacity: 0;
+    transform: rotateX(-90deg);
+}
+.let1 {
+  animation: drop 1.2s ease-in-out infinite;
+  animation-delay: 1.2s;
+  padding-right:10px;
+}
+
+.let2 {
+  animation: drop 1.2s ease-in-out infinite;
+  animation-delay: 1.3s;
+}
+
+.let3 {
+  animation: drop 1.2s ease-in-out infinite;
+  animation-delay: 1.4s;
+}
+
+.let4 {
+  animation: drop 1.2s ease-in-out infinite;
+  animation-delay: 1.5s;
+
+}
+
+.let5 {
+  animation: drop 1.2s ease-in-out infinite;
+  animation-delay: 1.6s;
+}
+
+.let6 {
+  animation: drop 1.2s ease-in-out infinite;
+  animation-delay: 1.7s;
+}
+
+.let7 {
+  animation: drop 1.2s ease-in-out infinite;
+  animation-delay: 1.8s;
+}
+
+@keyframes drop {
+  10% {
+    opacity: 0.5;
+  }
+
+  20% {
+    opacity: 1;
+    top: 3.78em;
+    transform: rotateX(-360deg);
+  }
+
+  80% {
+    opacity: 1;
+    top: 3.78em;
+    transform: rotateX(-360deg);
+  }
+
+  90% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+    top: 6.94em
+  }
+}
+
+
+.loader-loading---css {
+  animation: rotate 1s infinite;
+  height: 100px;
+  width: 100px;
+}
+
+.loader-loading---css:before,
+.loader-loading---css:after {
+  border-radius: 50%;
+  content: '';
+  display: block;
+  height: 40px;
+  width: 40px;
+}
+
+.loader-loading---css:before {
+  animation: ball1 1s infinite;
+  background-color: #cb2025;
+  box-shadow: 60px 0 0 #f8b334;
+  margin-bottom: 20px;
+}
+
+.loader-loading---css:after {
+  animation: ball2 1s infinite;
+  background-color: #00a096;
+  box-shadow: 60px 0 0 #97bf0d;
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg) scale(0.8);
+    -moz-transform: rotate(0deg) scale(0.8);
+  }
+
+  50% {
+    -webkit-transform: rotate(360deg) scale(1.2);
+    -moz-transform: rotate(360deg) scale(1.2);
+  }
+
+  100% {
+    -webkit-transform: rotate(720deg) scale(0.8);
+    -moz-transform: rotate(720deg) scale(0.8);
+  }
+}
+
+@keyframes ball1 {
+  0% {
+    box-shadow: 30px 0 0 #f8b334;
+  }
+
+  50% {
+    box-shadow: 0 0 0 #f8b334;
+    margin-bottom: 0;
+    -webkit-transform: translate(30px, 30px);
+    -moz-transform: translate(30px, 30px);
+  }
+
+  100% {
+    box-shadow: 60px 0 0 #f8b334;
+    margin-bottom: 20px;
+  }
+}
+
+@keyframes ball2 {
+  0% {
+    box-shadow: 60px 0 0 #97bf0d;
+  }
+
+  50% {
+    box-shadow: 0 0 0 #97bf0d;
+    margin-top: -40px;
+    -webkit-transform: translate(30px, 30px);
+    -moz-transform: translate(30px, 30px);
+  }
+
+  100% {
+    box-shadow: 60px 0 0 #97bf0d;
+    margin-top: 0;
+  }
+}
