--- a/src/pages/components/home/ForYou/ForYouPage.css
+++ b/src/pages/components/home/ForYou/ForYouPage.css
@@ -4,3 +4,39 @@
     transition: transform 0.3s ease;
     /* Điều chỉnh thời gian và kiểu chuyển động */
 }
+
+.ribbon-1 {
+    position: absolute;
+    background: rgb(255, 66, 78);
+    box-shadow: 0 0 0 999px rgb(255, 66, 78);
+    clip-path: inset(0 -100%);
+    top: 0;
+    min-height: 10px;
+}
+
+.left-ribbon {
+    inset: 0 auto auto 0;
+    transform-origin: 100% 0;
+    transform: translate(-39.3%) rotate(-45deg);
+}
+
+.ribbon-2 {
+    --f: 5px;
+    /* control the folded part*/
+    --r: 10px;
+    /* control the ribbon shape */
+    --t: 5px;
+    /* the top offset */
+
+    position: absolute;
+    inset: var(--t) calc(-1*var(--f)) auto auto;
+    padding: 0 10px var(--f) calc(10px + var(--r));
+    clip-path:
+        polygon(0 0, 100% 0, 100% calc(100% - var(--f)), calc(100% - var(--f)) 100%,
+            calc(100% - var(--f)) calc(100% - var(--f)), 0 calc(100% - var(--f)),
+            var(--r) calc(50% - var(--f)/2));
+    background: #BD1550;
+    box-shadow: 0 calc(-1*var(--f)) 0 inset #0005;
+        top: 0;
+        right: 0;
+}
