--- a/src/pages/components/home/category/loadingFavorite.css
+++ b/src/pages/components/home/category/loadingFavorite.css
@@ -22,6 +22,18 @@
     animation: animloader 2s linear infinite;
 }
 
+.loaderNewPrinting {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    display: block;
+    margin: 15px auto;
+    position: relative;
+    color: white;
+    box-sizing: border-box;
+    animation: animloader 2s linear infinite;
+}
+
 @keyframes animloader {
     0% {
         box-shadow: 14px 0 0 -2px, 38px 0 0 -2px, -14px 0 0 -2px, -38px 0 0 -2px;
