--- a/src/pages/components/information/information.css
+++ b/src/pages/components/information/information.css
@@ -11,7 +11,29 @@
   width: 100%;
   padding-bottom: 8px;
 }
+.loaderNew {
+  width: 6px;
+  height: 8px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  color: white;
+  box-sizing: border-box;
+  animation: animloader 2s linear infinite;
+}
 
+.loaderNew2 {
+  width: 6px;
+  height: 8px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  color: black;
+  box-sizing: border-box;
+  animation: animloader 2s linear infinite;
+}
 .information-header {
   color: rgb(13, 18, 22);
   font-family: Noto Sans Vietnamese, -apple-system, BlinkMacSystemFont, Segoe UI,
